--- a/src/style.css
+++ b/src/style.css
@@ -14,3 +14,14 @@ body {
     padding: 0;
     margin: 0;
 }
+
+.header {
+    display: flex;
+    padding: 1rem 2rem;
+    color: var(--clr-text);
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 1.2rem;
+    border-bottom: 2px solid var(--clr-list);
+    border-radius: 1px;
+}
