--- a/src/style.css
+++ b/src/style.css
@@ -25,3 +25,43 @@ body {
     border-bottom: 2px solid var(--clr-list);
     border-radius: 1px;
 }
+
+.list {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    background-color: var(--clr-list);
+    margin: 1.3rem 0;
+}
+
+.list-input {
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+}
+.checkbox {
+    -webkit-appearance: none;
+	background-color: var(--clr-list);
+	border-width: 3px;
+    border-style: solid;
+    border-color: #632329;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 9px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+
+.checkbox :checked {
+    background-color: var(--clr-grad1);
+    border-color: var(--clr-grad1);
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    color: #fff;
+    transition: all 0.2s;
+    
+}
+
+.checkbox :active {
+    background-color: var(--clr-grad2);
+}
