--- a/src/style.css
+++ b/src/style.css
@@ -59,9 +59,31 @@ body {
     box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
     color: #fff;
     transition: all 0.2s;
-    
+
 }
 
 .checkbox :active {
     background-color: var(--clr-grad2);
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    margin-top: 1rem;
+    margin-right: 1rem;
+}
+
+.buttons > button {
+    background-color: var(--clr-grad1);
+    border: none;
+    border-radius: 5px;
+    color: var(--clr-text);
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 0.8rem;
+    padding: 0.3rem 1rem;
+    margin: 0 0.5rem;
+    cursor: pointer;
 }
