--- a/src/style.css
+++ b/src/style.css
@@ -1,102 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Inter:wght@100;400;500;600;700;800&family=Lato&family=Poppins:wght@100;300;400;500;600;700&family=Roboto+Mono:wght@100;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap');
 
-:root { 
-    --clr-bg : #241722;
-    --clr-list : #352432;
-    --clr-text : #fff;
-    --clr-grad1 : #632329;
-    --clr-grad2 : #F25551;
-    --clr-grad3: #50F283;
+:root {
+  --clr-bg: #241722;
+  --clr-list: #352432;
+  --clr-text: #fff;
+  --clr-grad1: #632329;
+  --clr-grad2: #f25551;
+  --clr-grad3: #50f283;
 }
 
 body {
-    background-color: var(--clr-bg);
-    padding: 0;
-    margin: 0;
+  background-color: var(--clr-bg);
+  padding: 0;
+  margin: 0;
 }
 
 .header {
-    display: flex;
-    padding: 1rem 2rem;
-    color: var(--clr-text);
-    font-family: 'Inter', sans-serif;
-    font-weight: 600;
-    font-size: 1.2rem;
-    border-bottom: 2px solid var(--clr-list);
-    border-radius: 1px;
+  display: flex;
+  padding: 1rem 2rem;
+  color: var(--clr-text);
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  border-bottom: 2px solid var(--clr-list);
+  border-radius: 1px;
 }
 
 .list {
-    display: flex;
-    width: 80%;
-    justify-content: space-between;
-    background-color: var(--clr-list);
-    margin: 3rem auto;
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  background-color: var(--clr-list);
+  margin: 3rem auto;
 }
 
 .list-input {
-    padding: 1rem 2rem;
-    display: flex;
-    justify-content: space-between;
-    width: 300px;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
 }
+
 .checkbox {
-    -webkit-appearance: none;
-	background-color: var(--clr-list);
-	border-width: 3px;
-    border-style: solid;
-    border-color: #632329;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-	padding: 9px;
-	border-radius: 3px;
-	display: inline-block;
-	position: relative;
+  -webkit-appearance: none;
+  background-color: var(--clr-list);
+  border-width: 3px;
+  border-style: solid;
+  border-color: #632329;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 9px;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
 }
 
 .checkbox :checked {
-    background-color: var(--clr-grad1);
-    border-color: var(--clr-grad1);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-    color: #fff;
-    transition: all 0.2s;
-
+  background-color: var(--clr-grad1);
+  border-color: var(--clr-grad1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 -15px 10px -12px rgba(0, 0, 0, 0.05);
+  color: #fff;
+  transition: all 0.2s;
 }
 
 .checkbox :active {
-    background-color: var(--clr-grad2);
+  background-color: var(--clr-grad2);
 }
 
 .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2rem;
-    margin-top: 1rem;
-    margin-right: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
 }
 
 .buttons > button {
-    background-color: var(--clr-grad1);
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 1rem;
-    padding: 0.3rem 1rem;
-    margin: 0 0.5rem;
-    cursor: pointer;
+  background-color: var(--clr-grad1);
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 0.3rem 1rem;
+  margin: 0 0.5rem;
+  cursor: pointer;
 }
 
 .input {
-    background-color: var(--clr-list);
-    border: none;
-    border-radius: 5px;
-    color: var(--clr-text);
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    font-size: 0.8rem;
-    padding: 0.3rem 1rem;
-    margin: 0 0.5rem;
-    cursor: pointer;
+  background-color: var(--clr-list);
+  border: none;
+  border-radius: 5px;
+  color: var(--clr-text);
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 0.8rem;
+  padding: 0.3rem 1rem;
+  margin: 0 0.5rem;
+  cursor: pointer;
 }
